2006-04-26  Paul Eggert  <eggert@cs.ucla.edu>

	* doc/autoconf.texi (Portable C and C++, Varities of Unportability):
	(Integer Overflow, Null Pointers, Buffer Overruns):
	(Floating Point Portability, Exiting Portably): New sections.
	(Writing Test Programs): Fix some langauge.  Recommend exiting
	with status 1, not merely nonzero.  Clarify exit declaration.
	(Run Time): Move C exit status stuff to new Exiting Portably section.
	(Systemology): Mention Posix and levenez.  Update v7 reference.
	(Portable Shell): Mention the Posix shell.

2006-04-25  Stepan Kasal  <kasal@ucw.cz>

	* bin/autoconf.as (me): Replace by as_me.

2006-04-25  Paul Eggert  <eggert@cs.ucla.edu>

	* lib/m4sugar/m4sh.m4 (AS_SHELL_SANITIZE): Don't use AS_ERROR,
	since as_me isn't set yet.

2006-04-23  Paul Eggert  <eggert@cs.ucla.edu>

	Prepare for deprecation of AS_BASENAME and AS_DIRNAME, and fix
	a few minor bugs in this area.

	* doc/autoconf.texi (Programming in M4sh): Comment out the
	documentation of AS_BASENAME, for now.
	(Shell Substitutions): Do not use AS_DIRNAME in an example.
	(Limitations of Builtins) <basename>: Do not refer to
	AS_BASENAME.
	* bin/autoconf.as (me): Don't use AS_BASENAME.
	(dir): Remove the unused variable.
	* lib/m4sugar/m4sh.m4 (_AS_DETECT_REQUIRED): Renamed from
	AS_DETECT_REQUIRED.  All uses changed.
	(_AS_DETECT_SUGGESTED): Renamed from AS_DETECT_SUGGESTED.
	All uses changed.
	(_AS_DETECT_BETTER_SHELL): Put ;; at the end of a case.
	(AS_BASENAME): Use "basename --" to protect against leading "-".
	(_AS_BASENAME_EXPR): Renamed from AS_BASENAME_EXPR.  All uses changed.
	(_AS_BASENAME_SED): Renamed from AS_BASENAME_SED.  All uses changed.
	(_AS_BASENAME_PREPARE): Reject implementations that cannot handle "--".
	(_AS_DIRNAME_PREPARE): Likewise.
	(_AS_DIRNAME_EXPR): Renamed from AS_DIRNAME_EXPR.  All uses changed.
	(_AS_DIRNAME_SED): Renamed from AS_DIRNAME_SED.  All uses changed.
	(AS_DIRNAME): Use "dirname --".

2006-04-23  Paul Eggert  <eggert@cs.ucla.edu>
